deployments/helloworld-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: satellite-config-sample
  labels:
    name: satellite-config-sample
