deployments/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld-app-V2
    razee/watch-resource: lite
    dummy: test
  name: helloworld-app
  namespace: satellite-config-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hhelloworld-app-V2
  template:
    metadata:
      labels:
        app: helloworld-app-V2
    spec:
      containers:
      - image: icr.io/satellite-config/helloworld
        name: helloworld-app-V2
        imagePullPolicy: Always
